# Veylorn

./: CMakeLists.txt  LICENSE.md  README.md  Veylorn  game.cpp  game.h  lvlparser.cpp  lvlparser.h  main.cpp  map.cpp  map.h  map1.txt  map2.txt  map3.txt  object.h  player.h
auxiliary/: help.txt
auxiliary/maps/: map3.txt
examples/: exampleMap.txt
maps/: map1.txt  map3.txt
objects/: chest.cpp  chest.h  inventory.cpp  inventory.h  item.h  npc.cpp  npc.h  object.cpp  object.h  player.cpp  player.h
python/: generatorMaps.py
settings/: settings.cpp  settings.h
systems/: approve.cpp  approve.h  genmaps.cpp  genmaps.h  inpuSystem.cpp  inpusystem.cpp  inpusystem.h
ui/: helptips.cpp  helptips.h  hud.cpp  hud.h  render.cpp  render.h  renderinventory.cpp  renderinventory.h
utils/: conversion.cpp  conversion.h  filesystem.cpp  filesystem.h
world/: lvlparser.cpp  lvlparser.h  map.cpp  map.h
